<resources>
    <string name="app_name">StorageDataBySql</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="ok_button">OK</string>
    <string name="clear_button">CLEAR</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
</resources>
